# emoji-api

./: README.md  pyproject.toml
src/: data_handler.py  main.py
src/apis/: mysql.py  redis.py  s3.py
src/lib/: emoji_validator.py  image.py  image_minified.py  image_preview.py  qs.py  tier_parser.py  user.py
