[tool.poetry]
name = "vimeo-home-assignment"
version = "0.1.0"
description = ""
authors = ["Stas Ezersky <stasezer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
